5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1671_1100.log
== TEST (2019-04-19 13:33:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	A="Tartaruga"
elif(e==5):
	A="Garça"
	elif(e==10):
		A="Arara"
		elif(e==20):
		A="Mico-leão-dourado"
		elif(e==50):
			A="Onça-pintada"
			elif(e==100):
				A="Garoupa"
print(A)
-- ERROR:
File "XXXX", line 10
    elif(e==10):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:34:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	A="Tartaruga"
else:
	if(e==5):
		A="Garça"
	elif(e==10):
		A="Arara"
		elif(e==20):
		A="Mico-leão-dourado"
		elif(e==50):
			A="Onça-pintada"
			elif(e==100):
				A="Garoupa"
print(A)
-- ERROR:
File "XXXX", line 13
    elif(e==20):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:34:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	A="Tartaruga"
else:
	if(e==5):
		A="Garça"
	elif(e==10):
		A="Arara"
		else:
			if(e==20):
				A="Mico-leão-dourado"
			elif(e==50):
			A="Onça-pintada"
			elif(e==100):
				A="Garoupa"
print(A)
-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:37:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	A="Tartaruga"
else:
	if(e==5):
		A="Garça"
	elif(e==10):
		A="Arara"
		elif:(e==20):
				A="Mico-leão-dourado"
			elif(e==50):
			A="Onça-pintada"
			elif(e==100):
				A="Garoupa"
print(A)
-- ERROR:
File "XXXX", line 13
    elif:(e==20):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:37:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	A="Tartaruga"
else:
	if(e==5):
		A="Garça"
	elif(e==10):
		A="Arara"
		elif(e==20):
				A="Mico-leão-dourado"
			elif(e==50):
			A="Onça-pintada"
			elif(e==100):
				A="Garoupa"
print(A)
-- ERROR:
File "XXXX", line 13
    elif(e==20):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:38:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	A="Tartaruga"
elif(e==5):
		A="Garça"
	else:
		if(e==10):
		A="Arara"
		elif(e==20):
				A="Mico-leão-dourado"
			elif(e==50):
			A="Onça-pintada"
			elif(e==100):
				A="Garoupa"
print(A)
-- EXECUTION TIME:
0.143003
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 10
    else:
        ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:38:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	A="Tartaruga"
elif(e==5):
		A="Garça"
	else:
		if(e==10):
		A="Arara"
		elif(e==20):
				A="Mico-leão-dourado"
			elif(e==50):
			A="Onça-pintada"
			elif(e==100):
				A="Garoupa"
print(A)
-- ERROR:
File "XXXX", line 10
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:39:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	A="Tartaruga"
elif(e==5):
		A="Garça"
else:
		if(e==10):
		A="Arara"
		elif(e==20):
				A="Mico-leão-dourado"
			elif(e==50):
			A="Onça-pintada"
			elif(e==100):
				A="Garoupa"
print(A)
-- ERROR:
File "XXXX", line 12
    A="Arara"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:40:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	A="Tartaruga"
elif(e==5):
	A="Garça"
elif(e==10):
	A="Arara"
elif(e==20):
	A="Mico-leão-dourado"
elif(e==50):
	A="Onça-pintada"
elif(e==100):
	A="Garoupa"
print(A)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:41:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
elif(e==5):
	msg="Garça"
elif(e==10):
	ms="Arara"
elif(e==20):
	msg="Mico-leão-dourado"
elif(e==50):
	msg="Onça-pintada"
elif(e==100):
	msg="Garoupa"
print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:41:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
elif(e==5):
	msg="Garça"
elif(e==10):
	ms="Arara"
elif(e==20):
	msg="Mico-leão-dourado"
elif(e==50):
	msg="Onça-pintada"
elif(e==100):
	msg="Garoupa"
print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:43:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print(msg)
elif(e==5):
	msg="Garça"
	print(msg)
	elif(e==10):
	ms="Arara"
	print(msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print(msg)
elif(e==50):
	msg="Onça-pintada"
	print(msg)
elif(e==100):
	msg="Garoupa"
	print(msg)
-- ERROR:
File "XXXX", line 12
    elif(e==10):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:43:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print(msg)
elif(e==5):
	msg="Garça"
	print(msg)
elif(e==10):
	ms="Arara"
	print(msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print(msg)
elif(e==50):
	msg="Onça-pintada"
	print(msg)
elif(e==100):
	msg="Garoupa"
	print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:44:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	ms="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
elif(e==100):
	msg="Garoupa"
	print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:44:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	ms="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
elif(e==100):
	msg="Garoupa"
	print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:46:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
else(e==10):
	ms="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
else(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
elif(e==100):
	msg="Garoupa"
	print(msg)
-- ERROR:
File "XXXX", line 12
    else(e==10):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:47:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
else:
	if(e==10):
	ms="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
else:
	if(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
elif(e==100):
	msg="Garoupa"
	print(msg)
-- ERROR:
File "XXXX", line 14
    ms="Arara"
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:47:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
else:
	if(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
else:
	if(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
elif(e==100):
	msg="Garoupa"
	print(msg)
-- ERROR:
File "XXXX", line 14
    msg="Arara"
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:48:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	ms="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
else(e==100):
	msg="Garoupa"
	print(msg)
-- ERROR:
File "XXXX", line 21
    else(e==100):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:48:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	ms="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:49:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	ms="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:49:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	ms="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:49:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:50:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:50:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):
	msg="Onça-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print(msg)
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:51:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onça-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:"msg)
-- ERROR:
File "XXXX", line 23
    print("Animal:"msg)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:51:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garça"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leão-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onça-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:53:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	
elif(e==5):#não
	msg="Garça"
	
elif(e==10):
	msg="Arara"
	
elif(e==20):#não
	msg="Mico-leão-dourado"
	
elif(e==50):#não
	msg="Onça-pintada"
	
else:
	msg="Garoupa"
print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:53:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	
elif(e==5):#não
	msg="Garça"
	
elif(e==10):
	msg="Arara"
	
elif(e==20):#não
	msg="Mico-leão-dourado"
	
elif(e==50):#não
	msg="Onça-pintada"
	
else:
	msg="Garoupa"
print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:56:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	
elif(e==5):#não
	msg="Garça"
	
elif(e==10):
	msg="Arara"
	
elif(e==20):#não
	msg="Mico-leão-dourado"
	
elif(e==50):#não
	msg="Onça-pintada"
	
else:
	msg="Garoupa"
<print("Animal:",msg)>
-- ERROR:
File "XXXX", line 23
    <print("Animal:",msg)>
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 13:56:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	
elif(e==5):#não
	msg="Garça"
	
elif(e==10):
	msg="Arara"
	
elif(e==20):#não
	msg="Mico-leão-dourado"
	
elif(e==50):#não
	msg="Onça-pintada"
	
else:
	msg="Garoupa"
print(<"Animal:",msg>)
-- EXECUTION TIME:
0.202135
-- ERROR:
  File "/home/codebench/codes/1671/1100/main.py", line 23
    print(<"Animal:",msg>)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:56:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	
elif(e==5):#não
	msg="Garça"
	
elif(e==10):
	msg="Arara"
	
elif(e==20):#não
	msg="Mico-leão-dourado"
	
elif(e==50):#não
	msg="Onça-pintada"
	
else:
	msg="Garoupa"
print(<"Animal:",msg>)
-- ERROR:
File "XXXX", line 23
    print(<"Animal:",msg>)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:58:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	
elif(e==5):#não
	msg="Garça"
	
elif(e==10):
	msg="Arara"
	
elif(e==20):#não
	msg="Mico-leão-dourado"
	
elif(e==50):#não
	msg="Onça-pintada"
	
else:
	msg="Garoupa"
print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:58:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	
else:
	if(e==5):#não
	msg="Garça"
	elif(e==10):
	msg="Arara"
	else:
		if(e==20):#não
	msg="Mico-leão-dourado"
	elif(e==50):#não
	msg="Onça-pintada"
	else:
	msg="Garoupa"
print("Animal:",msg)
-- ERROR:
File "XXXX", line 11
    msg="Garça"
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 13:59:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	
else:
	if(e==5):#não
	msg="Garca"
	elif(e==10):
	msg="Arara"
	else:
		if(e==20):#não
	msg="Mico-leao-dourado"
	elif(e==50):#não
	msg="Onca-pintada"
	else:
	msg="Garoupa"
print("Animal:",msg)
-- ERROR:
File "XXXX", line 11
    msg="Garca"
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:00:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:01:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 14:01:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- EXECUTION TIME:
0.133708
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:01:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:02:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
elif(e==100)
	msg="Garoupa"
	print("Animal:",msg)
-- ERROR:
File "XXXX", line 21
    elif(e==100)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:03:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else(e==100)
	msg="Garoupa"
	print("Animal:",msg)
-- ERROR:
File "XXXX", line 21
    else(e==100)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:10:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg:"Invalido"
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
elif(e==100)
	msg="Garoupa"
	print("Animal:",msg)
-- ERROR:
File "XXXX", line 23
    elif(e==100)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:10:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
elif(e==100)
	msg="Garoupa"
	print("Animal:",msg)
-- ERROR:
File "XXXX", line 23
    elif(e==100)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:12:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else
	msg="Garoupa"
	print("Animal:",msg)
-- ERROR:
File "XXXX", line 23
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:12:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:13:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:13:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:13:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:13:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:13:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:13:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:14:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 14:15:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- EXECUTION TIME:
0.133659
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:15:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 14:15:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- EXECUTION TIME:
0.127881
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 14:16:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))

if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- EXECUTION TIME:
0.170092
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:20:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:20:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:20:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:20:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:21:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:21:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if(not((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100))):
	msg="Invalido"
	print("Animal",msg)
elif(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
elif(e==10):
	msg="Arara"
	print("Animal:",msg)
elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
else:
	msg="Garoupa"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:23:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100)):
	if(e==2):
	msg="Tartaruga"
	print("Animal:",msg)
	elif(e==5):#não
	msg="Garca"
	print("Animal:",msg)
	elif(e==10):
	msg="Arara"
	print("Animal:",msg)
	elif(e==20):#não
	msg="Mico-leao-dourado"
	print("Animal:",msg)
	elif(e==50):#não
	msg="Onca-pintada"
	print("Animal:",msg)
	else:
	msg="Garoupa"
	print("Animal:",msg)
else:
	msg="Invalido"
	print("Animal",msg)
-- ERROR:
File "XXXX", line 8
    msg="Tartaruga"
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:25:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100)):
	if(e==2):
		msg="Tartaruga"
		print("Animal:",msg)
	elif(e==5):#não
		msg="Garca"
		print("Animal:",msg)
	elif(e==10):
		msg="Arara"
		print("Animal:",msg)
	elif(e==20):#não
		msg="Mico-leao-dourado"
		print("Animal:",msg)
	elif(e==50):#não
		msg="Onca-pintada"
		print("Animal:",msg)
	else:
		msg="Garoupa"
		print("Animal:",msg)
else:
	msg="Invalido"
	print("Animal",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 14:25:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100)):
	if(e==2):
		msg="Tartaruga"
		print("Animal:",msg)
	elif(e==5):#não
		msg="Garca"
		print("Animal:",msg)
	elif(e==10):
		msg="Arara"
		print("Animal:",msg)
	elif(e==20):#não
		msg="Mico-leao-dourado"
		print("Animal:",msg)
	elif(e==50):#não
		msg="Onca-pintada"
		print("Animal:",msg)
	else:
		msg="Garoupa"
		print("Animal:",msg)
else:
	msg="Invalido"
	print("Animal",msg)
-- EXECUTION TIME:
0.142002
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:25:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100)):
	if(e==2):
		msg="Tartaruga"
		print("Animal:",msg)
	elif(e==5):#não
		msg="Garca"
		print("Animal:",msg)
	elif(e==10):
		msg="Arara"
		print("Animal:",msg)
	elif(e==20):#não
		msg="Mico-leao-dourado"
		print("Animal:",msg)
	elif(e==50):#não
		msg="Onca-pintada"
		print("Animal:",msg)
	else:
		msg="Garoupa"
		print("Animal:",msg)
else:
	msg="Invalido"
	print("Animal",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 14:26:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100)):
	if(e==2):
		msg="Tartaruga"
		print("Animal:",msg)
	elif(e==5):
		msg="Garca"
		print("Animal:",msg)
	elif(e==10):
		msg="Arara"
		print("Animal:",msg)
	elif(e==20):
		msg="Mico-leao-dourado"
		print("Animal:",msg)
	elif(e==50):
		msg="Onca-pintada"
		print("Animal:",msg)
	else:
		msg="Garoupa"
		print("Animal:",msg)
else:
	msg="Invalido"
	print("Animal",msg)
-- EXECUTION TIME:
0.116275
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:26:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100)):
	if(e==2):
		msg="Tartaruga"
		print("Animal:",msg)
	elif(e==5):
		msg="Garca"
		print("Animal:",msg)
	elif(e==10):
		msg="Arara"
		print("Animal:",msg)
	elif(e==20):
		msg="Mico-leao-dourado"
		print("Animal:",msg)
	elif(e==50):
		msg="Onca-pintada"
		print("Animal:",msg)
	else:
		msg="Garoupa"
		print("Animal:",msg)
else:
	msg="Invalido"
	print("Animal",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:26:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100)):
	if(e==2):
		msg="Tartaruga"
		print("Animal:",msg)
	elif(e==5):
		msg="Garca"
		print("Animal:",msg)
	elif(e==10):
		msg="Arara"
		print("Animal:",msg)
	elif(e==20):
		msg="Mico-leao-dourado"
		print("Animal:",msg)
	elif(e==50):
		msg="Onca-pintada"
		print("Animal:",msg)
	else:
		msg="Garoupa"
		print("Animal:",msg)
else:
	msg="Invalido"
	print("Animal",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 14:27:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100)):
	if(e==2):
		msg="Tartaruga"
		print("Animal:",msg)
	elif(e==5):
		msg="Garca"
		print("Animal:",msg)
	elif(e==10):
		msg="Arara"
		print("Animal:",msg)
	elif(e==20):
		msg="Mico-leao-dourado"
		print("Animal:",msg)
	elif(e==50):
		msg="Onca-pintada"
		print("Animal:",msg)
	else:
		msg="Garoupa"
		print("Animal:",msg)
else:
	msg="Invalido"
	print("Animal:",msg)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 14:27:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
e=int(input("valor da nota:"))
print("Entrada:", e)
if((e==2) or (e==5) or (e==10) or (e==20) or (e==50) or (e==100)):
	if(e==2):
		msg="Tartaruga"
		print("Animal:",msg)
	elif(e==5):
		msg="Garca"
		print("Animal:",msg)
	elif(e==10):
		msg="Arara"
		print("Animal:",msg)
	elif(e==20):
		msg="Mico-leao-dourado"
		print("Animal:",msg)
	elif(e==50):
		msg="Onca-pintada"
		print("Animal:",msg)
	else:
		msg="Garoupa"
		print("Animal:",msg)
else:
	msg="Invalido"
	print("Animal:",msg)
-- EXECUTION TIME:
0.106836
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
